--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31910.695246009476!2d36.721626665348964!3d-1.270855662434244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f199c5c5b282b%3A0x80e9e2429e405793!2sKangemi%2C%20Nairobi!5e0!3m2!1sen!2ske!4v1713385539878!5m2!1sen!2ske" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <style>
+      /* CSS for the iframe */
+      iframe {
+        width: 100%; 
+        height: 400px; 
+        border: 1px solid black;
+      }
+    </style>
 
   </body>
 </html>
